# DocuMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  storage.py
eval/: EVALUATION_GUIDE.md  evaluate.py  golden.jsonl  ragas_eval.py  run.py  run_eval.py  test_queries.json
eval/results/: latest.json
legacy/streamlit/components/: sidebar.py
rag/: answer.py  cache.py  contextualize.py  embed.py  ingest.py  llm.py  retrieve.py  store.py  text_clean.py
rag/agents/: generator.py  grader.py  graph.py  hallucination.py  memory.py  rewriter.py  router.py  state.py
rag/chains/: generation.py  rerank.py  retrieval.py
tests/: test_agent.py  test_cache_hyde.py  test_ingest.py  test_llm_pipeline.py  test_query.py
tests/fixtures/: elements.py
ui/: streamlit_app.py
ui/components/: chat.py  pdf_viewer.py  sidebar.py
web/: Dockerfile  jest.config.js  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/__tests__/: api.test.ts  landing.test.tsx  login.test.tsx
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/chat/: ChatClient.tsx  page.tsx
web/app/docs/: page.tsx
web/app/how-to-use/: page.tsx
web/app/login/: page.tsx
web/components/: nav.tsx
web/components/ui/: button.tsx
web/lib/: api.ts  chat-storage.ts
