


[project]
name = "rag-pdf-assistant"
version = "0.1.0"
description = "FastAPI-based RAG system for querying PDF documents using embeddings and ChromaDB"
authors = [
    {name = "Robayed Ashraf"}
]
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
ignore = ["E402"]
