


[project]
name = "documind"
version = "0.1.0"
description = "DocuMind — Agentic Document Intelligence powered by LangGraph, Gemini, and hybrid search"
authors = [
    {name = "Robayed Ashraf"}
]
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
ignore = ["E402"]
